--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# =========================
+# Unnecessary App Files and Dirs
+# =========================
+
+# App Directories
 node_modules/
 dist/
+
+# Debug files
+npm-debug.*
