--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "*",
+    "json2csv": "^3.7.1",
     "react": "*",
     "react-bootstrap": "*",
     "react-dom": "*",
