--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHtml.js",
+    "clean-dist": "npm run remove-dist && mkdir dist\\prod",
+    "clean-dist-test": "npm run remove-dist-test && mkdir dist\\test",
+    "remove-dist": "node_modules/.bin/rimraf dist\\prod",
+    "remove-dist-test": "node_modules/.bin/rimraf dist\\test",
+    "build:html": "babel-node tools/buildHtml.js --prod",
+    "build-test:html": "babel-node tools/buildHtml.js",
     "prebuild": "npm-run-all clean-dist test lint build:html",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js"
+    "prebuild-test": "npm-run-all clean-dist-test test lint build-test:html",
+    "build": "babel-node tools/build.js --prod",
+    "build-test": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js --prod",
+    "postbuild-test": "babel-node tools/distServer.js"
   },
   "author": "California Department of Technology",
   "license": "MIT",
