--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "employee-directory",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Employee Directory",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
@@ -10,17 +10,17 @@
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist\\prod",
+    "clean-dist-prod": "npm run remove-dist-prod && mkdir dist\\prod",
     "clean-dist-test": "npm run remove-dist-test && mkdir dist\\test",
-    "remove-dist": "node_modules/.bin/rimraf dist\\prod",
+    "remove-dist-prod": "node_modules/.bin/rimraf dist\\prod",
     "remove-dist-test": "node_modules/.bin/rimraf dist\\test",
-    "build:html": "babel-node tools/buildHtml.js --prod",
+    "build-prod:html": "babel-node tools/buildHtml.js --prod",
     "build-test:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist test lint build:html",
+    "prebuild-prod": "npm-run-all clean-dist-prod test lint build-prod:html",
     "prebuild-test": "npm-run-all clean-dist-test test lint build-test:html",
-    "build": "babel-node tools/build.js --prod",
+    "build-prod": "babel-node tools/build.js --prod",
     "build-test": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js --prod",
+    "postbuild-prod": "babel-node tools/distServer.js --prod",
     "postbuild-test": "babel-node tools/distServer.js"
   },
   "author": "California Department of Technology",
