header links, stylesheet seperate file, help page, version num (moment.js install req)
+link on header title
+current page link highlighted
+seperate stylesheet (minified test/prod stylesheet, not on dev)
+version number correct timezone and now has hour and min (uses
moment.js)

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "less": "*",
     "less-loader": "*",
     "mocha": "*",
+    "moment": "*",
     "nock": "*",
     "npm-run-all": "*",
     "open": "*",
