remove export, help text, version numbering, and mobile nav
+ remove hour/min from version number
+ remove help text, recenter search
+ hard coded webpack version
+ remove onClick handlers for toggling menu
+ menu no longer hamburgers, removed export
+ added important to manager link styling

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "rimraf": "*",
     "style-loader": "*",
     "url-loader": "*",
-    "webpack": "*",
+    "webpack": "^1.14.0",
     "webpack-dev-middleware": "*",
     "webpack-hot-middleware": "*"
   }
